Bug 344403. Don't refer to |this| in constructors in mozilla/accessible (bad practice overall). r=mats, sr=neil